--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h2>git 테스트</h2>
     <p>git 테스트 html파일입니다. 환영합니다.</p>
     <p>두번째 올리는 html파일입니다.</p>
+    <p>세번째 올리는 html 파일 입니다. gitstudy3</p>
 </body>
 </html>
